@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{609, 67}, {994, 1108}}</string>
+	<string>{{545, 81}, {1014, 1091}}</string>
 </dict>
 </plist>
